cfn/vpc.yml
---
AWSTemplateFormatVersion: 2010-09-09
Description: CNF - VPC container for customer VPN connections

Parameters:
  VpcNetwork:
    Description: VPC Network Range
    Type: String
  SubnetCidrs:
    Description: Comma-separated list of four CIDRs for the VPC's subnets
    Type: CommaDelimitedList
  FlowLogRetentionPeriod:
    Description: Flow log retention in days
    Type: Number
    Default: 30

Resources:
  VpcSsmParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Description: References the VPC ID
      Type: String
      Name: /pras/vpc/id
      Value: !Ref Vpc

  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcNetwork
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: pras-vpc

  VpcNonceDefaultEgressRule:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt Vpc.DefaultSecurityGroup
      IpProtocol: "-1"
      CidrIp: 0.0.0.0/0
      Description: Allow all outbound

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Select [0, !Ref SubnetCidrs]
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Sub ${AWS::Region}a
      Tags:
        - Key: Name
          Value: pras-public-subnet-a

  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      MapPublicIpOnLaunch: true
      CidrBlock: !Select [1, !Ref SubnetCidrs]
      AvailabilityZone: !Sub ${AWS::Region}b
      Tags:
        - Key: Name
          Value: pras-public-subnet-b

  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Select [2, !Ref SubnetCidrs]
      AvailabilityZone: !Sub ${AWS::Region}c
      Tags:
        - Key: Name
          Value: pras-private-subnet-a

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Select [3, !Ref SubnetCidrs]
      AvailabilityZone: !Sub ${AWS::Region}a
      Tags:
        - Key: Name
          Value: pras-private-subnet-b

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: pras-vpc-public-rt

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: pras-vpc-private-rt

  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRouteTable

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: pras-vpc-igw

  VpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc

  PublicRouteToInternet:
    Type: AWS::EC2::Route
    DependsOn:
      - VpcGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  AllocateElasticIp:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn:
      - VpcGatewayAttachment
    Properties:
      AllocationId: !GetAtt AllocateElasticIp.AllocationId
      SubnetId: !Ref PublicSubnetA

  PrivateRouteToNatGatewayInPublicSubnet:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  VpcFlowLogRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - vpc-flow-logs.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: pras-vpc-flowlogs-policy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - logs:PutLogEvents
                Resource:
                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:${AWS::StackName}*
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                Resource:
                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:*

  VpcFlowLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: !Ref FlowLogRetentionPeriod

  VpcFlowLog:
    Type: AWS::EC2::FlowLog
    Properties:
      DeliverLogsPermissionArn: !GetAtt VpcFlowLogRole.Arn
      LogGroupName: !Ref VpcFlowLogGroup
      ResourceId: !Ref Vpc
      ResourceType: VPC
      LogFormat: ${account-id} ${interface-id} ${srcaddr} ${dstaddr} ${pkt-srcaddr} ${pkt-dstaddr} ${srcport} ${dstport} ${protocol} ${packets} ${bytes} ${start} ${end} ${action} ${log-status} ${vpc-id} ${subnet-id} ${instance-id} ${tcp-flags} ${type}
      TrafficType: ALL

Outputs:
  VpcId:
    Value: !Ref Vpc
    Export:
      Name: pras-vpc-id

  PublicSubnetAId:
    Value: !Ref PublicSubnetA
    Export:
      Name: pras-vpc-public-subnet-a-id

  PublicSubnetBId:
    Value: !Ref PublicSubnetB
    Export:
      Name: pras-vpc-public-subnet-b-id

  PrivateSubnetAId:
    Value: !Ref PrivateSubnetA
    Export:
      Name: pras-vpc-private-subnet-a-id

  PrivateSubnetBId:
    Value: !Ref PrivateSubnetB
    Export:
      Name: pras-vpc-private-subnet-b-id
